[project]
name="protoplaster"
version="1.0"
description="An automated framework for platform testing (Hardware and BSPs)"
authors=[{name = "Antmicro Ltd"}]
license={text = "Apache Software License (http://www.apache.org/licenses/LICENSE-2.0)"}
dynamic = ["dependencies"]

[project.scripts]
protoplaster = 'protoplaster.protoplaster:main'
protoplaster-report = 'protoplaster.report_generator.protoplaster_report:main'
protoplaster-system-report = 'protoplaster.report_generator.system_report:main'

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.package-data]
"*" = ["template.md", "style.css", "report_table_template.html", "report_table_template.md", "default_commands.yml"]
